# lawrenceanum

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: e2e-history.yml  rust-ci.yml  update-corpus-data.yml  update-law-data.yml
crates/egov-client/: Cargo.toml
crates/egov-client/src/: lib.rs
crates/estat-client/: Cargo.toml
crates/estat-client/src/: lib.rs
crates/gian-client/: Cargo.toml
crates/gian-client/src/: lib.rs
crates/kanpo-amend/: Cargo.toml
crates/kanpo-amend/examples/: dump.rs  structured.rs
crates/kanpo-amend/src/: format.rs  lib.rs  lines.rs  model.rs  normalize.rs  pdftotext.rs  segment.rs  shinkyu.rs  table.rs  vertical.rs
crates/kanpo-amend/tests/: shinkyu_fixtures.rs
crates/kanpo-amend/tests/fixtures/: gyogyo_p2.bbox.html  jinji_p4.bbox.html  koyou_cont_p66.bbox.html  yubin_p2.bbox.html
crates/kanpo-client/: Cargo.toml
crates/kanpo-client/src/: http.rs  lib.rs  pdf.rs
crates/kanpo-linker/: Cargo.toml
crates/kanpo-linker/src/: lib.rs
crates/kokkai-client/: Cargo.toml
crates/kokkai-client/src/: lib.rs
crates/law-diff/: Cargo.toml
crates/law-diff/src/: lib.rs
crates/law-normalizer/: Cargo.toml
crates/law-normalizer/src/: lib.rs
crates/lawpub-cli/: Cargo.toml
crates/lawpub-cli/src/: budget.rs  build.rs  compress.rs  diffs.rs  enforcement.rs  feeds.rs  gian.rs  kanpo.rs  main.rs  proceedings.rs  procurement.rs  pubcomment.rs  reiki.rs  shingikai.rs  snapshots.rs  state.rs  status.rs  tsutatsu.rs  validate.rs
crates/linking/: Cargo.toml
crates/linking/src/: lib.rs
crates/procurement-client/: Cargo.toml
crates/procurement-client/src/: lib.rs
crates/pubcomment-client/: Cargo.toml
crates/pubcomment-client/src/: lib.rs
crates/reiki-client/: Cargo.toml
crates/reiki-client/src/: lib.rs
crates/search-index/: Cargo.toml
crates/search-index/data/: NOTICE.md
crates/search-index/examples/: build_kanpo_fixture.rs
crates/search-index/src/: lib.rs
crates/shingikai-client/: Cargo.toml
crates/shingikai-client/src/: lib.rs
crates/tsutatsu-client/: Cargo.toml
crates/tsutatsu-client/src/: lib.rs
docs/: chihogikai-reiki-plan.md  data-compression-plan.md  diff-design.md  history-deploy-handoff.md  proceedings-plan.md  public-corpus-roadmap.md  reiki-plan.md  roadmap.md  softlaw-plan.md
figma/: README.md  index.html  package.json  playwright.config.ts  playwright.history.config.ts  pnpm-lock.yaml  vite.config.ts
figma/src/app/: App.tsx
figma/src/app/components/: mock-data.ts  sidebar-nav.tsx  theme-provider.tsx  topbar.tsx
figma/src/app/components/views/: browse-view.tsx  compare-view.tsx  dashboard-charts.tsx  dashboard-view.tsx  enforcement-view.tsx  feed-view.tsx  gian-view.tsx  proceedings-view.tsx  pubcomment-view.tsx  search-view.tsx  simple-views.tsx  tsutatsu-view.tsx
figma/src/app/data/: api.ts  jp-law-thesaurus.json  search-engine.ts  use-laws.ts  use-live-data.ts  use-proceedings.ts  use-pubcomment.ts
figma/src/imports/pasted_text/: egov-law-data-design.md
figma/tests/: browse.spec.ts  enforcement.spec.ts  feed.spec.ts  gian.spec.ts  history.spec.ts  kanpo.spec.ts  pubcomment.spec.ts  serve.mjs  smoke.spec.ts  tsutatsu.spec.ts  views.spec.ts
figma/tests/fixtures/public/: health.json  index.json  search.db
figma/tests/fixtures/public/kanpo/2026-04-02/: index.json
figma/tests/fixtures/public/laws/: index.json
figma/tests/fixtures/public/laws/129AC0000000089/: history.ndjson.zst  versions.json
figma/tests/fixtures/public/laws/129AC0000000089/revisions/: 129AC0000000089_20161013_428AC1000000027.json  129AC0000000089_20170602_429AC0000000044.json  129AC0000000089_20180401_429AC0000000044.json  129AC0000000089_20180620_430AC0000000059.json  129AC0000000089_20190517_501AC0000000002.json  129AC0000000089_20190614_501AC0000000034.json  129AC0000000089_20190701_430AC0000000072.json  129AC0000000089_20191211_501AC0000000071.json  129AC0000000089_20200301_429AC0000000044.json  129AC0000000089_20200401_429AC0000000044.json  129AC0000000089_20200401_430AC0000000072.json  129AC0000000089_20200401_501AC0000000002.json  129AC0000000089_20200401_501AC0000000034.json  129AC0000000089_20210428_503AC0000000024.json  129AC0000000089_20210519_503AC0000000037.json  (+17 more)
figma/tests/fixtures/public/tsutatsu/: index.json  shotoku.json
public/: health.json  index.html  index.json  manifest.json  search.db  sitemap.xml
public/assets/: api-D1Cf3Tx3.js  browse-view-tHdfUJv-.js  compare-view-B9oqyNna.js  dashboard-charts-ec87pFLf.js  dashboard-view-BaYTgcv3.js  icons-DQWCB5Vx.js  index-D20qoKiK.js  index-lmi41nJG.css  label-CwDwxdUt.js  radix-Dry9WSO8.js  recharts-CB-PEwNL.js  search-engine-DGytBqNh.js  search-view-D7RwXj_a.js  simple-views-DZLX1-F4.js  use-laws-9SGmxhKl.js
public/laws/: all.ndjson  index.json
public/laws/129AC0000000089/: current.json  timeline.json  versions.json
public/laws/129AC0000000089/articles/: art_1.json  art_2.json  art_3.json
public/laws/129AC0000000089/revisions/: 023fc6f1423f.json
public/laws/140AC0000000045/: current.json  timeline.json  versions.json
public/laws/140AC0000000045/articles/: art_1.json  art_2.json
public/laws/140AC0000000045/revisions/: 823c5025f0c1.json
public/laws/321CONSTITUTION/: current.json  timeline.json  versions.json
public/laws/321CONSTITUTION/articles/: art_1.json
public/laws/321CONSTITUTION/revisions/: 0de103437c2c.json
public/laws/322AC0000000049/: current.json  timeline.json  versions.json
public/laws/322AC0000000049/articles/: art_1.json
public/laws/322AC0000000049/revisions/: 6003442324ee.json
public/laws/417AC0000000086/: timeline.json  versions.json
public/laws/417AC0000000086/articles/: art_1.json
public/laws/417AC0000000086/revisions/: ef323ac2bbf2.json
public/schema/: law-document.json  manifest.json  updates.json
public/updates/: 2026-05-09.json  bulk-cat1.json  latest.json
scripts/: upload-history-bundles.sh  upload-proceedings-cache.sh  upload-revisions-corpus.sh  upload-search-db.sh
state/: corpus_latest.json  latest.json
