[package]
name = "egov-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
zip.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tokio.workspace = true
tracing.workspace = true
quick-xml.workspace = true
rayon.workspace = true
