[package]
name = "gian-client"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# charset: Shift-JIS の衆議院ページを text_with_charset で復号するため。
reqwest = { workspace = true, features = ["blocking", "charset"] }
scraper.workspace = true
tracing.workspace = true
chrono.workspace = true
