[package]
name = "kanpo-client"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
kanpo-amend = { path = "../kanpo-amend" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
scraper.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
