[package]
name = "kanpo-linker"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
kanpo-client = { path = "../kanpo-client" }
law-normalizer = { path = "../law-normalizer" }
