[package]
name = "kokkai-client"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tracing.workspace = true
