[package]
name = "law-normalizer"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
quick-xml.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
