[package]
name = "lawpub-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[[bin]]
name = "lawpub"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true
flate2 = "1"
zstd = "0.13"
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
egov-client = { path = "../egov-client" }
law-normalizer = { path = "../law-normalizer" }
law-diff = { path = "../law-diff" }
kanpo-client = { path = "../kanpo-client" }
kanpo-linker = { path = "../kanpo-linker" }
search-index = { path = "../search-index" }
