[package]
name = "linking"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
aho-corasick.workspace = true
tracing.workspace = true
walkdir.workspace = true
