[package]
name = "tsutatsu-client"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# charset: 国税庁サイトは Shift-JIS。text_with_charset で復号する。
reqwest = { workspace = true, features = ["blocking", "charset"] }
scraper.workspace = true
tracing.workspace = true
chrono.workspace = true
